[package]
name = "leetcode-in-rust"
version = "0.1.0"
authors = ["ihciah <ihciah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.6.5"

[lib]
doctest = false
test = true
